testfälle + checkstyle + findBugs